# cu-projects

./: .gitignore
2270Lecture/ArrayList/ArrayList/: FixedArraryList.cpp
2270Lecture/rec/Recitation 4 writeup and exercise files-20190205/: Linkedlist.cpp  a.out
CSCI2270/: CMakeLists.txt
CSCI2270/Hmwk/hmwk2/: CMakeLists.txt  a.out  wordAnalysis.cpp
CSCI2270/Labs/lab1/: CMakeLists.txt  main.cpp
CSCI2270/Labs/rec2/: swap.cpp
CSCI2270/Labs/rec3/: a.out
CSCI2270/LectureSlides_Notes/: Lecture4AlgoCmdPointers - Shortcut.lnk
CSCI2270/LectureSlides_Notes/Exercise2/Exercise2/: swap.cpp
CSCI2270/LectureSlides_Notes/Exercise2/__MACOSX/: ._Exercise2
CSCI2270/LectureSlides_Notes/Exercise2/__MACOSX/Exercise2/: ._swap.h
CSCI2270/Lectures/lecture3/: file_input.cpp  file_output_and_append.cpp  input_from_keyboard.cpp
CSCI_1300/Homework/Hmwk2/: Hmwk2.P1.cpp  Hmwk2.P2.cpp  Hmwk2.P3.cpp  Hmwk2.P4.cpp
CSCI_1300/Homework/Hmwk3/: Hmwk3.P1.cpp  Hmwk3.P2.cpp  Hmwk3.P3.cpp
CSCI_1300/Homework/Hmwk4/: jeopardy_dice.cpp
CSCI_1300/Homework/Hmwk5/: .cpp  Hmwk5.cpp
CSCI_1300/Homework/Hmwk6/: Hmwk6.cpp
CSCI_1300/Homework/Hmwk7/: Book.h  Hmwk7.cpp  User.cpp  User.h  make_submission.sh
CSCI_1300/Homework/Hmwk8/: Book.cpp  Book.h  CMakeLists.txt  Hmwk8.cpp  Library.cpp  Library.h  User.cpp  User.h  b.txt  books.txt  build.sh  clean.sh  r.txt  ratings.txt  test.cpp
CSCI_1300/Homework/Hmwk9/: Attractions.cpp  Attractions.h  CMakeLists.txt  Calendar.h  Common.h  Date.cpp  Date.h  Forts.cpp  Forts.h  Game.cpp  Game.h  GameEnd.cpp  GameEnd.h  Health.cpp  Health.h  Main.cpp  Milestone.cpp  Milestone.h  Milestones.cpp  Milestones.h  Misfortunes.cpp  Misfortunes.h  Money.cpp  Money.h  OutbackGanders.cpp  Photo.h  Pigs.cpp  Pigs.h  Player.cpp  Player.h  Players.cpp  Players.h  Puzzles.cpp  Puzzles.h  Servo.cpp  Servo.h  Sickness.cpp  Sickness.h  Supplies.cpp  Supplies.h  (+21 more)
CSCI_1300/Homework/Hmwk9/*text files/: attraction-milestones.txt  fort-milestones.txt
CSCI_1300/Homework/Hmwk9/text-files/: *Hmwk9Notes*.txt  attraction-milestones.txt  milestones.txt
CSCI_1300/LectureExamples/1-13/: FizzBuzz.cpp  arithmetic.division.cpp  boolean.cpp  cereal.fruitloops.cpp  convertSeconds.cpp  countdown.cpp  countdownCustom.cpp  diamond.cpp  doWhile.cpp  elevator.cpp  even_odd.cpp  increment.cpp  infiniteLoop.cpp  isAM_PM.cpp  multTable_while.cpp  nested_loops1.cpp  six-pack volume.cpp  switch_example.cpp  whileloop.balance.cpp  wishGreetings.cpp
CSCI_1300/LectureExamples/Arrays/: arr.cpp  babynames.cpp  largest.cpp  medals_1D.cpp  medals_2D.cpp  score.cpp  score_v2.cpp
CSCI_1300/LectureExamples/Classes/: cashregister.cpp  cashregister.h  registertest0.NO_CLASSES.cpp  registertest1.cpp  registertest2.cpp
CSCI_1300/LectureExamples/Streams/: Sreams:Angel.txt  babynames_v1.cpp  getline_example.cpp  mary_fileO_template.cpp  popdensity.cpp
CSCI_1300/LectureExamples/Strings/: Rachel_string1.cpp  Rachel_string2.cpp  comparisons.cpp  countAs.cpp  email_v3.cpp  remove.cpp  remove2.cpp  traverseString.cpp
CSCI_1300/Other/: Untitled1.cpp
CSCI_1300/Other/Class/: random.cpp
CSCI_1300/Recitation/rec1/: hello_csci_1300.cpp  recitation1.cpp
CSCI_2270/Hmwk/hmwk4/: CMakeLists.txt  ProducerConsumer.cpp  ProducerConsumer.hpp  ProducerConsumerDriver.cpp  RPNCalculator.cpp  RPNCalculator.hpp  RPNCalculatorDriver.cpp
CSCI_2270/Labs/: CMakeLists.txt
CSCI_2270/Lectures/: a.out  quiztest.cpp
CSCI_2270/Lectures/HTandHeap/: CMakeLists.txt  PriorityQueues  a.out  driverMaxHeap.cpp  driverMinHeap.cpp
Hmwk7/: Book.cpp  Book.h  Hmwk7.cpp  User.cpp  User.h
(+327 files in other folders)
